selfhost/test/typechecker/indexing/map_error_key_type_mismatch.out
Error at %FILE_NAME%:2:3
Type mismatch
  |  m[1]
       ^
Expected: String
but instead found: Int
