selfhost/test/typechecker/indexing/map_error_key_type_mismatch.abra
val m = { a: 1, b: 3 }
m[1]